--- a/.github/workflows/enarxbot.yml
+++ b/.github/workflows/enarxbot.yml
@@ -47,7 +47,7 @@ jobs:
   enarxbot:
     runs-on: ubuntu-latest
     env:
-      BOT_TOKEN: ${{ secrets.BOT_TOKEN }}
+      GITHUB_TOKEN: ${{ secrets.BOT_TOKEN }}
     name: enarxbot
     steps:
       - uses: enarx/bot@master
