Test badge label

--- a/.github/workflows/enarxbot.yml
+++ b/.github/workflows/enarxbot.yml
@@ -48,6 +48,6 @@ jobs:
     runs-on: ubuntu-latest
     env:
       BOT_TOKEN: ${{ secrets.BOT_TOKEN }}
-    name: enarxbot
+    name: enarxbot for enarx-keeldr
     steps:
       - uses: enarx/bot@master
